CRUD QrCodes
